# ScytheCurrencyApp

./: CMakeLists.txt  README.md
qml/: CurrencyDelegate.qml  LoadingScreen.qml  Main.qml  NavigationBar.qml
src/: appcontroller.cpp  appcontroller.h  coingeckodataworker.cpp  coingeckodataworker.h  cryptocurrency.cpp  cryptocurrency.h  cryptocurrencymodel.cpp  cryptocurrencymodel.h  cryptocurrencyproxymodel.cpp  cryptocurrencyproxymodel.h  main.cpp
